--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ streamlit==1.12.0
 wordcloud==1.9.4
 altair==4.2.0
 plotly==5.22.0
-tensorflow==2.12.0
-numpy==1.23.5  # Kompatibel dengan semua package di atas dan Python 3.10
+tensorflow==2.13.0
+numpy==1.23.5 
